--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             <a href="https://www.youtube.com/watch?v=c-1i96qpF-s">
                 <img src="https://img.youtube.com/vi/c-1i96qpF-s/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU&t=8s"></a>
+            <a href="https://www.youtube.com/watch?v=CyiiEJRZjSU&t=8s">
                 <img src="https://img.youtube.com/vi/CyiiEJRZjSU/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=3hizA2N79Gw"></a>
+            <a href="https://www.youtube.com/watch?v=3hizA2N79Gw">
                 <img src="https://img.youtube.com/vi/4jGRyEa2jhE/maxresdefault.jpg">
             </a>
-            <a href="https://www.youtube.com/watch?v=LZBlXkDvhh4&t=11s"></a>
+            <a href="https://www.youtube.com/watch?v=LZBlXkDvhh4&t=11s">
                 <img src="https://img.youtube.com/vi/O8UGVY-wZsg/maxresdefault.jpg">
             </a>
 
